src/components/frontpagecomponents/Training.module.css
.training {
  width: 95%;
  height: auto;
  margin: 0 auto;
  /* padding: 7.6rem 0 0 6.1rem; */
  border-radius: 2rem;
  border: 0.1rem solid var(--grey-color);
  color: var(--dark-color);
  margin-bottom: 20rem;
}

.training_header {
  padding: 7.6rem 0 2.9rem 6.1rem;
}
.training_header h2 {
  color: var(--primary-color);
  /* padding-right: 70rem; */
  margin-top: 1.8rem;
  line-height: 1;
}
.training_header h2 span {
  color: var(--tertiary-color-dark);
}

.training_main {
  border-top: 0.1rem solid var(--grey-color);
  border-bottom: 0.1rem solid var(--grey-color);
  padding: 2.9rem 5.9rem 5.5rem 5.9rem;
}

.training_main_list {
  list-style: none;
  transition: all 0.5s;
}
.training_main_list_item {
  display: grid;
  grid-template-columns: 0.5fr 2fr 0.5fr;
  align-items: center;
  background-color: var(--secondary-color);
  box-shadow: 0 0.2rem 0.4rem 0 rgba(0, 0, 0, 0.25);
  padding: 2.5rem 4rem 2.5rem 2.8rem;
  border-radius: 2rem;
  transition: all 0.5s;
}

.training_main_list_item img {
  justify-self: right;
  width: 2rem;
  transition: all 0.5s;
}
.training_list_active {
  transform: rotate(45deg);
  transition: all 0.5s;
}
.training_main_list_item:not(:last-child) {
  margin-bottom: 6rem;
}

.training_point_detail_cont {
  list-style: none;
  grid-column: span 3;
  margin-top: 2rem;
}
.training_point_detail_cont li {
  margin-bottom: 2rem;
  display: flex;
  align-items: center;
  column-gap: 1rem;
}

.training_cta_cont {
  padding: 4.2rem 6.1rem 6.8rem 6.1rem;
  display: flex;
  justify-content: space-between;
}

.training_btn1:link,
.training_btn1:visited,
.training_btn2:link,
.training_btn2:visited {
  text-decoration: none;
  display: inline-block;
  padding: 1rem 9rem;
  border-radius: 3rem;
}

.training_btn1:link,
.training_btn1:visited {
  color: var(--secondary-color);
  background-color: var(--primary-color);
}
.training_btn2:link,
.training_btn2:visited {
  color: var(--primary-color);
  background-color: var(--primary-color-light);
}

/* MEDIA QUERIES */
@media (max-width: 75em) {
}
@media (max-width: 59em) {
}
@media (max-width: 50em) {
  .training_btn1:link,
  .training_btn1:visited,
  .training_btn2:link,
  .training_btn2:visited {
    padding: 1rem 2rem;
  }
}
@media (max-width: 44em) {
  /* .training_main_list li h4 {
    font-size: 1.8rem;
  } */
}
@media (max-width: 31.2em) {
  .training_main {
    padding-left: 2rem;
    padding-right: 2rem;
  }
  .training_main_list_item {
    padding-left: 1.5rem;
    padding-right: 2rem;
  }
  .training_header {
    padding-left: 2rem;
  }
  .training_cta_cont {
    display: grid;
    justify-items: center;
    justify-content: center;
    width: 100%;
  }

  .training_btn2:link,
  .training_btn2:visited {
    display: none;
  }
}
@media (max-width: 23.5em) {
}

